--- a/myWebsite/style.css
+++ b/myWebsite/style.css
@@ -1,5 +1,5 @@
 
-/* remove any default browser styling*/
+/* remove any default browser styling* ,, having issues with pre-exising styles interfering with my styling*/
 *{
     margin: 0;
     padding: 0;
