--- a/myWebsite/style.css
+++ b/myWebsite/style.css
@@ -1,30 +1,34 @@
-
-/* remove any default browser styling* ,, having issues with pre-exising styles interfering with my styling*/
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: 0;
-}
-
-.titleBorder {
-   border: 50px solid white;
-   text-align: center;
-   color: white;
-   background: none; 
-   margin: 0;
-   padding: 0;
-
-}
-.toDoContainer{
-    background: white;
-}
-
-h1{
-    color: black;
-    margin: 0; 
-    padding: 0;
-}
-
 body {
-    background-color: #9ad9ab
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
+
+/* Header/website title */
+.header {
+  padding: 20px;
+  text-align: center;
+  background: #93C385;
+  color: white;
+}
+
+/* font size */
+.header h1 {
+  font-size: 20px;
+}
+
+/* Main column ; keeps content away from the edges*/
+.main {   
+  width: 100%;
+  background-color: white;
+  padding: 20px;
+}
+
+/* To-Do List styling */
+#todoForm {
+  margin-bottom: 20px;
+}
+
+#taskList {
+  list-style-type: none;
+  padding: 0;
+} 
