--- a/myWebsite/style.css
+++ b/myWebsite/style.css
@@ -102,13 +102,6 @@
   color: #999; 
 }
 
-.timer-container{
-  box-sizing: border-box;
-  padding: 20px;
-  background-color: #ffffff; 
-  border: 1px solid #ddd; 
-  text-align: center;
-}
 
 .timer-container button {
   padding: 10px 20px;
@@ -135,5 +128,19 @@
   width: 100%;
   height: 100%;
   font-family: 'Montserrat', sans-serif; 
-  
+  outline: none;  
+  border-color: white;
+  font-size: 16px;
 }
+
+.notesbuttons{
+  padding: 10px 20px;
+  margin-top: 10px;
+  background-color: #6e8266; 
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer; 
+  width: 112px; 
+}
+
