--- a/myWebsite/style.css
+++ b/myWebsite/style.css
@@ -127,14 +127,14 @@ padding: 5%;
   margin-bottom: 10px; 
 }
 
+/*styling for the open modal button*/
 .listModalButton {
   position: absolute;
-  top: 0;   /* Align to the top of the container */
-  right: 0; /* Align to the right of the container */
+  top: 0;   
+  right: 0; 
   border-radius: 4px;
   padding: 10px;
   cursor:pointer;
-  /* Add padding, margin, etc., as needed */
 }
 
 /***************************NOTES LIST STYLING ******************************/
@@ -204,30 +204,28 @@ gap: 1px;
 /**************************MODAL****************************/
 /* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none; /*hidden*/
+  position: fixed; 
+  z-index: 1; /*sit on top of content*/
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%; 
+  height: 100%; 
+  background-color: rgba(0,0,0,0.4); 
 }
 
 /* Modal Content */
 .modal-content {
   position: relative;
   background-color: #fefefe;
-  margin: 10% auto; /* 10% from the top and centered */
+  margin: 10% auto; /*10% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
   border-radius:10px;
-  width: 35%; /* Could be more or less, depending on screen size */
+  width: 35%; 
   height: 30%;
 }
 
-/* The Close Button */
 .close {
   color: #aaaaaa;
   float: right;
