--- a/myWebsite/style.css
+++ b/myWebsite/style.css
@@ -51,7 +51,8 @@ header {
   margin-left:50px;
   margin-right:50px;
 }
- /*global style for buttons*/
+
+ /*button style used accross website*/
 .buttonStyle{
   background-color:#253367; 
   color:white; /*text colour*/
@@ -202,7 +203,7 @@ gap: 1px;
 }
 
 /**************************MODAL****************************/
-/* The Modal (background) */
+/* the modal (background) */
 .modal {
   display: none; /*hidden*/
   position: fixed; 
